--- a/src/main/java/com/mycompany/assignment_project_2/Menu_Customer.form
+++ b/src/main/java/com/mycompany/assignment_project_2/Menu_Customer.form
@@ -99,7 +99,6 @@
                       </Group>
                   </Group>
                   <Group type="102" alignment="1" attributes="0">
-                      <EmptySpace max="-2" attributes="0"/>
                       <Component id="jLabel8" min="-2" max="-2" attributes="0"/>
                       <EmptySpace min="-2" pref="23" max="-2" attributes="0"/>
                   </Group>
@@ -134,9 +133,9 @@
           <Group type="103" groupAlignment="0" attributes="0">
               <Group type="102" alignment="1" attributes="0">
                   <EmptySpace min="-2" pref="16" max="-2" attributes="0"/>
-                  <Group type="103" groupAlignment="3" attributes="0">
-                      <Component id="jLabel1" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Group type="103" groupAlignment="0" attributes="0">
                       <Component id="Customer_Display_Name" alignment="1" min="-2" pref="32" max="-2" attributes="0"/>
+                      <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace pref="28" max="32767" attributes="0"/>
                   <Component id="jPanel2" min="-2" max="-2" attributes="0"/>
@@ -189,8 +188,14 @@
         </Container>
         <Component class="javax.swing.JLabel" name="jLabel1">
           <Properties>
+            <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+              <Color blue="0" green="0" red="0" type="rgb"/>
+            </Property>
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Segoe UI" size="24" style="3"/>
+            </Property>
+            <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+              <Color blue="ff" green="ff" red="ff" type="rgb"/>
             </Property>
             <Property name="text" type="java.lang.String" value="WELCOME CUSTOMER:- "/>
           </Properties>
@@ -249,7 +254,7 @@
     </Component>
     <Component class="javax.swing.JButton" name="Customer_Option_4">
       <Properties>
-        <Property name="text" type="java.lang.String" value="&lt;html&gt; Send payment and feedback for completed appointments"/>
+        <Property name="text" type="java.lang.String" value="&lt;html&gt; Send remarks for an appointment&#xa;"/>
         <Property name="actionCommand" type="java.lang.String" value="Customer_Option_4"/>
       </Properties>
       <Events>
