--- a/src/main/java/com/mycompany/assignment_project_2/Login_GUI.form
+++ b/src/main/java/com/mycompany/assignment_project_2/Login_GUI.form
@@ -57,7 +57,7 @@
                   <EmptySpace max="32767" attributes="0"/>
                   <Group type="103" groupAlignment="0" max="-2" attributes="0">
                       <Component id="Rl_txt" alignment="1" min="-2" pref="90" max="-2" attributes="0"/>
-                      <Component id="User_txt" alignment="1" max="32767" attributes="0"/>
+                      <Component id="ID_txt" alignment="1" max="32767" attributes="0"/>
                       <Component id="Pass_txt" alignment="1" max="32767" attributes="0"/>
                   </Group>
                   <EmptySpace min="-2" pref="69" max="-2" attributes="0"/>
@@ -71,7 +71,7 @@
                   <EmptySpace type="separate" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="jLabel1" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="User_txt" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="ID_txt" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace type="separate" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
@@ -101,7 +101,7 @@
             <Property name="text" type="java.lang.String" value="Password:- "/>
           </Properties>
         </Component>
-        <Component class="javax.swing.JTextField" name="User_txt">
+        <Component class="javax.swing.JTextField" name="ID_txt">
         </Component>
         <Component class="javax.swing.JPasswordField" name="Pass_txt">
         </Component>
