--- a/src/main/java/com/mycompany/assignment_project_2/Registration_Form.form
+++ b/src/main/java/com/mycompany/assignment_project_2/Registration_Form.form
@@ -51,10 +51,8 @@
               <Group type="102" alignment="0" attributes="0">
                   <EmptySpace max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                      <Group type="103" alignment="0" groupAlignment="1" max="-2" attributes="0">
-                          <Component id="jLabel1" alignment="0" max="32767" attributes="0"/>
-                          <Component id="jLabel6" alignment="0" max="32767" attributes="0"/>
-                      </Group>
+                      <Component id="jLabel1" alignment="0" max="32767" attributes="0"/>
+                      <Component id="jLabel6" alignment="0" max="32767" attributes="0"/>
                       <Component id="jLabel2" alignment="0" max="32767" attributes="0"/>
                       <Component id="jLabel4" alignment="0" max="32767" attributes="0"/>
                       <Component id="jLabel5" alignment="0" max="32767" attributes="0"/>
@@ -118,7 +116,7 @@
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel2">
           <Properties>
-            <Property name="text" type="java.lang.String" value="Enter New Password                   :- "/>
+            <Property name="text" type="java.lang.String" value="Enter Password                            :- "/>
           </Properties>
         </Component>
         <Component class="javax.swing.JPasswordField" name="Pass_txt">
@@ -198,6 +196,9 @@
           </Properties>
         </Component>
         <Component class="javax.swing.JTextField" name="ID_txt">
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="ID_txtActionPerformed"/>
+          </Events>
         </Component>
       </SubComponents>
     </Container>
