--- a/src/main/java/com/mycompany/assignment_project_2/Login_GUI.form
+++ b/src/main/java/com/mycompany/assignment_project_2/Login_GUI.form
@@ -6,6 +6,7 @@
     <Property name="location" type="java.awt.Point" editor="org.netbeans.beaninfo.editors.PointEditor">
       <Point value="[0, 0]"/>
     </Property>
+    <Property name="resizable" type="boolean" value="false"/>
   </Properties>
   <SyntheticProperties>
     <SyntheticProperty name="formSizePolicy" type="int" value="1"/>
@@ -127,14 +128,12 @@
         <Component class="javax.swing.JComboBox" name="Rl_txt">
           <Properties>
             <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-              <StringArray count="4">
+              <StringArray count="3">
                 <StringItem index="0" value="Admin"/>
                 <StringItem index="1" value="Customer"/>
                 <StringItem index="2" value="Technician"/>
-                <StringItem index="3" value=" "/>
               </StringArray>
             </Property>
-            <Property name="selectedIndex" type="int" value="3"/>
           </Properties>
           <AuxValues>
             <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
